cchlib-core-deprecated : 4.1.7 Fix log4j.properties Fix pom.xml Add cx.ath.choisnet.sql classes Add cx.ath/choisnet/util/duplicate classes
git-svn-id: https://cchlib.googlecode.com/svn/trunk@2674 bc589049-105d-1923-a3ce-6fcb24364ed1